<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    tools:context=".page5">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <ScrollView
        android:layout_width="360dp"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="418dp"
                android:layout_height="80dp"
                android:background="@color/white"/>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="wrap_content"
                android:layout_height="330sp"
                android:background="@drawable/slideshow_box_template"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20sp"/>

            <TextView
                android:id="@+id/lbl_description"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:scrollbarThumbVertical="@null"
                android:background="@drawable/textview_description"
                android:padding="20sp"
                android:text="@string/description_here"
                android:textColor="@color/off_black"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10sp"/>

            <ImageView
                android:id="@+id/img_location"
                android:layout_width="357dp"
                android:layout_height="218dp"
                android:background="@drawable/textview_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30sp"/>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="418dp"
        android:layout_height="80dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lbl_features"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:fontFamily="@font/proxima_bold"
        android:gravity="left"
        android:text="@string/feature_here"
        android:textColor="@color/off_black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/lbl_province"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:text="@string/province_name_here"
        android:textColor="@color/off_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />


</androidx.constraintlayout.widget.ConstraintLayout>